# entain-bet-pipeline

./: Dockerfile  README.md  pyproject.toml  run.py
cli_outputs/features/: customer_features.parquet
cli_outputs/validation/: invalid_bets.csv  validation_report.json
outputs/features/: customer_features.parquet
outputs/validation/: invalid_bets.csv
src/bet_pipeline/: __init__.py  build_features.py  cli.py  schema.py  validate.py
src/bet_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_feature_build.py  test_validation_pipeline.py
